--- a/thundersite/thunderapp/templates/thunderapp/base.html
+++ b/thundersite/thunderapp/templates/thunderapp/base.html
@@ -18,7 +18,7 @@
     </button>
 
     <div class="collapse navbar-collapse" id="collapse_target">
-        <a class="navbar-brand"><img scr="{%  static 'thunderlogo.jpg' %}"></a>
+        <a class="navbar-brand"><img src="{%  static 'thunderIcon.png' %}" style="border-radius: 10px;" alt="" width="36" height="36"></a>
         <span class="navbar-text">Thunder</span>
         <ul class="navbar-nav">
             <li class="nav-item">
