--- a/thundersite/thunderapp/templates/thunderapp/login.html
+++ b/thundersite/thunderapp/templates/thunderapp/login.html
@@ -1,7 +1,7 @@
 
 {% load staticfiles %}
 
-{% block login %}
+{% block content %}
 <div class="input-group">
        {% if loggedin %}
             @<h1 class="h3 mb-3 font-weight-normal">
