--- a/thundersite/thunderapp/templates/thunderapp/user-registered.html
+++ b/thundersite/thunderapp/templates/thunderapp/user-registered.html
@@ -1,4 +1,4 @@
-
+{% extends "thunderapp/base.html" %}
 {% block content %}
 <span class='info'>&#8658; You must be logged in to view this page.</span>
 <br>
