--- a/thundersite/thunderapp/templates/thunderapp/signup.html
+++ b/thundersite/thunderapp/templates/thunderapp/signup.html
@@ -1,4 +1,3 @@
-{% extends "thunderapp/base.html" %}
 {% load staticfiles %}
 
 {% block signup %}
@@ -26,7 +25,12 @@
          <span class='fieldname' >Email</span>
          <input type="text" id="regEmail">
          <br><br>
+
          <input type='submit' value="SUBMIT" id='reguser'>
       </form>
+       <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+
+       <script type="text/javascript" src="{% static 'register.js' %}"></script>
+
    </div>
 {% endblock %}
