--- a/thundersite/thunderapp/templates/thunderapp/login.html
+++ b/thundersite/thunderapp/templates/thunderapp/login.html
@@ -15,7 +15,7 @@
                <img class="mb-4" src="{%  static 'thunderlogo.jpg' %}" alt="" width="300" height="300">
                <h1 class="h3 mb-3 font-weight-normal">Please enter your details to login</h1>
                <label for="inputUserName" class="sr-only">UserName</label>
-               <input type="email" id="inputUserName" name='username' maxlength="50" class="form-control" placeholder="UserName" required="" autofocus="" pb-role="username">
+               <input type="text" id="inputUserName" name='username' maxlength="50" class="form-control" placeholder="UserName" required="" autofocus="" pb-role="username">
                <label for="inputPassword" class="sr-only">Password</label>
                <input type="password" id="inputPassword" class="form-control"  name='password' placeholder="Password" required="" pb-role="password">
                <div class="checkbox mb-3">
