--- a/thundersite/thunderapp/templates/thunderapp/signup.html
+++ b/thundersite/thunderapp/templates/thunderapp/signup.html
@@ -1,6 +1,7 @@
+{% extends "thunderapp/base.html" %}
 {% load staticfiles %}
 
-{% block signup %}
+{% block content %}
    <div class='main'>
       <h3>Please enter your details to sign up</h3>
       <form method='POST' id="signupuser">
