--- a/thundersite/thunderapp/templates/thunderapp/base.html
+++ b/thundersite/thunderapp/templates/thunderapp/base.html
@@ -21,38 +21,30 @@
         <a class="navbar-brand"><img src="{%  static 'thunderIcon.png' %}" style="border-radius: 10px;" alt="" width="36" height="36"></a>
         <span class="navbar-text">Thunder</span>
         <ul class="navbar-nav">
+            {% if loggedin %}
             <li class="nav-item">
-                <a class="nav-link" href="#">Link 1</a>
+                <a class="nav-link" href="#">Messages</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Link 2</a>
+                <a class="nav-link" href="#">Profile</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Link 3</a>
+                <a class="nav-link" href="#">Find Friends</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Link 4</a>
+                <a class="nav-link" href="#">Log Out</a>
             </li>
+            {% else %}
+            <li class="nav-item">
+                <a class="nav-link" href="#">Log in</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Sign Up</a>
+            </li>
+            {% endif %}
         </ul>
     </div>
 </nav>
-<div class="jumbotron" style="margin-bottom: 0px;">
-    <h1>Thunder</h1>
-    <p>Matching you to the right one.</p>
-</div>
-
-<h1>Hello, world!</h1>
-
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id libero quam. Sed eu imperdiet ipsum. Fusce sit amet sem ullamcorper, sagittis nibh at, tincidunt ipsum. Curabitur tempor vehicula dolor, eget eleifend urna ullamcorper eget. Integer mollis magna eu odio mollis, in commodo dolor elementum. Curabitur consequat congue ipsum vitae interdum. Proin finibus metus nulla, nec feugiat tortor auctor sed. Morbi et ex iaculis, laoreet ante vel, tincidunt orci. Mauris sit amet volutpat sapien. Phasellus tempor venenatis nisl in elementum. Nullam eget neque id nibh accumsan condimentum sed ut tellus.
-
-Vivamus nisl nisi, pulvinar in consequat id, fringilla ut lectus. Ut sed lacus a lorem cursus suscipit et eu dolor. Etiam quis risus nec sem volutpat gravida. Sed eu orci purus. Duis quis mattis massa. Sed pellentesque mauris vel porta interdum. Maecenas eu purus et velit vestibulum viverra. Pellentesque venenatis rutrum molestie. Nunc ac accumsan erat. Pellentesque viverra egestas mi a malesuada. Aliquam erat volutpat. Suspendisse eu congue nisl. Nulla a fermentum turpis, eget lacinia enim. Mauris semper viverra justo vel finibus.
-
-In hac habitasse platea dictumst. Nullam tincidunt nulla lobortis, faucibus nisi sit amet, porttitor purus. Phasellus ullamcorper nibh sed sem accumsan, in ultrices quam varius. Fusce vestibulum, leo a suscipit rutrum, diam eros efficitur nibh, eu ultrices magna mi eu urna. Sed efficitur est sed tristique feugiat. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec sem orci, ullamcorper in quam nec, malesuada ullamcorper leo.
-
-Integer ornare mi ac nulla volutpat, iaculis bibendum felis scelerisque. Maecenas id aliquam massa. Maecenas quis odio et mi placerat feugiat. Vivamus id tellus sit amet lorem feugiat rhoncus condimentum et dolor. Proin egestas neque eleifend erat volutpat elementum. Proin dictum auctor tellus vitae lobortis. Mauris tempor orci a volutpat pellentesque.
-
-Etiam vitae nibh pharetra, varius metus ut, lacinia libero. Nulla ut vehicula massa, ut pharetra eros. Phasellus faucibus ligula a ante condimentum, vitae pellentesque nisi gravida. Morbi suscipit purus eget mollis pellentesque. Suspendisse non lectus eu orci laoreet tempus a in orci. Nam vitae leo at dui bibendum feugiat. Proin dictum dictum nisl, sed mattis sem porta sed. Donec in lectus in nulla congue ornare. Quisque ac dignissim nulla. Nunc egestas volutpat nulla, at faucibus tellus tincidunt mollis. Morbi porttitor neque quis ipsum ornare posuere. Morbi ultrices volutpat viverra.
-
 
 {% block content  %}
 {% endblock %}
@@ -63,6 +55,6 @@ Etiam vitae nibh pharetra, varius metus ut, lacinia libero. Nulla ut vehicula ma
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-
+<script type="text/javascript" src="{% static 'file_upload.js' %}"></script>
 </body>
 </html>
