--- a/thundersite/thunderapp/templates/thunderapp/login.html
+++ b/thundersite/thunderapp/templates/thunderapp/login.html
@@ -10,7 +10,7 @@
             </h1>
             <br><br>
        {% else %}
-           <form class="form-signin" pb-autologin="true" autocomplete="off" method='POST'>
+           <form class="form-signin" id="usersignin" pb-autologin="true" autocomplete="off" method='POST'>
                {% csrf_token %}
                <img class="mb-4" src="{%  static 'thunderlogo.jpg' %}" alt="" width="300" height="300">
                <h1 class="h3 mb-3 font-weight-normal">Please enter your details to login</h1>
@@ -26,5 +26,8 @@
                <button class="btn btn-lg btn-primary btn-block" type="submit" pb-role="submit">Log in</button>
            </form>
        {% endif %}
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="{% static 'signin.js' %}"></script>
 </div>
 {% endblock %}
