--- a/thundersite/thunderapp/templates/thunderapp/profile.html
+++ b/thundersite/thunderapp/templates/thunderapp/profile.html
@@ -6,25 +6,33 @@
 
 <div id="profilePicture">
 {% if member.profileImage %}
-    <img id='profile-img' height=150 src='{{ member.profileImage.url }}'>
-{% else %}
+    <img id='profile-img' class="rounded mx-auto d-block" height=150 src='{{ member.profileImage.url }}'>
 
-<img id='profile-img' height=150 src="{% static '/profile-image.jpg' %}">
-{% endif %}
+    {% else %}
+
+<img id='profile-img' class="rounded mx-auto d-block" height=150 src="{% static '/profile-image.jpg' %}">
+
+    {% endif %}
 </div>
 <div>
-<span>Username: {{member.username}}</span>
-<br>
-
-<span>First Name: {{member.firstName}}</span>
-<br>
-
-<span>Last Name: {{member.lastName}}</span>
-    <br>
-    <span>Gender: {{member.gender}}</span>
     <br>
 
-<span>Date Of Birth: {{member.dateOfBirth}}</span>
+    <span >Username: <input type="text" class="form-control" name="profileusername" value="{{member.username}}"></span>
+<br>
+
+<span>First Name: <input type="text" class="form-control" name="profilefirstname" value="{{member.firstName}}"> </span>
+<br>
+
+<span>Last Name: <input type="text" class="form-control" name="profilelastname" value="{{member.lastName}}"></span>
+    <br>
+    <span>Gender: <input type="text" class="form-control" name="profilegender" value="{{member.gender}}"></span>
+    <br>
+
+
+<span>Date Of Birth:</span> <div>{{member.dateOfBirth}}</div>
+    <br>
+
+    <span>Email: <input type="text" class="form-control" name="profileemail" value="{{member.email}}"></span>
     <br>
 
 
@@ -33,6 +41,15 @@
 <br>
     {% csrf_token %}
 
-    Select Profile Picture: <input type="file" name="myFile" id='regprofileimage{{member.id}}'>
-    <button id="save{{member.id}}" onclick="uploadProfilePicture('{{member.id}}')">Save</button>
+    Update Profile Picture: <input type="file" name="myFile" id='regprofileimage{{member.id}}'>
+<br><br>
+
+
+<button id="save{{member.id}}" class="btn btn-lg btn-primary btn-block" onclick="uploadProfilePicture('{{member.id}}')">Save Profile</button>
+
+<br>
+
+
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+
 {% endblock %}
