--- a/thundersite/thunderapp/templates/thunderapp/login.html
+++ b/thundersite/thunderapp/templates/thunderapp/login.html
@@ -3,6 +3,10 @@
 {% load staticfiles %}
 
 {% block content %}
+<div class="container-fluid">
+    <section class="container">
+        <div class="container-page">
+            <div class='main-login main-centre'>
 <div class="input-group">
        {% if loggedin %}
             @<h1 class="h3 mb-3 font-weight-normal">
@@ -30,5 +34,9 @@
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     <script type="text/javascript" src="{% static 'signin.js' %}"></script>
+</div>
+            </div>
+        </div>
+    </section>
 </div>
 {% endblock %}
