--- a/thundersite/thunderapp/templates/thunderapp/matchlist.html
+++ b/thundersite/thunderapp/templates/thunderapp/matchlist.html
@@ -1,3 +1,7 @@
 {% extends "thunderapp/base.html" %}
 {% block content %}
+    Guess who has a match!
+    {% for match in currentMember %}
+        <h6 href="https://www.w3schools.com">{{ match.firstName }}</h6>
+    {% endfor %}
 {% endblock %}
