--- a/thundersite/thunderapp/templates/thunderapp/login.html
+++ b/thundersite/thunderapp/templates/thunderapp/login.html
@@ -3,6 +3,11 @@
 {% load staticfiles %}
 
 {% block content %}
+
+{% block alert %}
+{% include "thunderapp/alerts.html" %}
+{% endblock %}
+
 <div class="container-fluid">
     <section class="container">
         <div class="container-page">
