--- a/thundersite/thunderapp/templates/thunderapp/profile.html
+++ b/thundersite/thunderapp/templates/thunderapp/profile.html
@@ -11,22 +11,26 @@
         color: white;
     }
 
-    .left {
-        position: absolute;
-        top: 20px;
-        left: 30px;
-
-    }
-
-    .bottom-right {
+    .centered {
         position: absolute;
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
-        font-size: 50px;
-
+        font-size: 55px;
+        text-align: center;
     }
+
 </style>
+
+{% block alert %}
+
+
+{% include "thunderapp/alerts.html" %}
+
+
+{% endblock %}
+
+
 <div class="container-fluid" style="background:rgb(255,255,255) !important;">
     <section class="container">
         <div class="container-page">
@@ -34,21 +38,33 @@
                 <br>
                 <div class="bordercontainer">
                     <img id='img' class="img-fluid" alt="Responsive image"  height=100 width="1500" src="{% static '/border.png' %}">
-                    <div class="bottom-right">{{member.username}}</div>
+
+                    <div class="centered">{{member.username}}</div>
+                    <br>
+
+                </div>
+                <br>
+
+                <div class="bordercontainer">
+
                     <label id="profilePicture" for="regprofileimage{{member.id}}"  data-toggle="tooltip" title="Upload Profile Image">
 
                         {% if member.profileImage %}
-                        <img id='profile-img' class="rounded-circle left " height=150 src='{{ member.profileImage.url }}'>
+                        <img id='profile-img' class="rounded-circle img-fluid" alt="Responsive image" height=150 src='{{ member.profileImage.url }}'>
 
                         {% else %}
 
-                        <img id='profile-img' class="rounded-circle left" height=150 src="{% static '/profile-image.jpg' %}">
+                        <img id='profile-img' class="rounded-circle img-fluid" alt="Responsive image" height=150 src="{% static '/profile-image.jpg' %}">
 
                         {% endif %}
                     </label>
                 </div>
 
 <div>
+    <br>
+
+    <button id="save{{member.id}}" class="btn btn-lg btn-primary btn-block" onclick="updateProfile('{{member.id}}')">Save Profile</button>
+
     <br>
 
 <span>First Name: <input type="text" class="form-control" id="profilefirstname" value="{{member.firstName}}"> </span>
@@ -76,9 +92,6 @@
 
 
 
-<button id="save{{member.id}}" class="btn btn-lg btn-primary btn-block" onclick="updateProfile('{{member.id}}')">Save Profile</button>
-
-<br>
 
 
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
