--- a/thundersite/thunderapp/templates/thunderapp/signup.html
+++ b/thundersite/thunderapp/templates/thunderapp/signup.html
@@ -2,10 +2,16 @@
 {% load staticfiles %}
 
 {% block content %}
+
+{% block alert %}
+{% include "thunderapp/alerts.html" %}
+{% endblock %}
+
 <div class="container-fluid">
     <section class="container">
         <div class="container-page">
             <div class='main-login main-centre'>
+                <br><br>
                 <h3>Please enter your details to sign up</h3>
                 <form method='POST' id="signupuser">
                     {% csrf_token %}
