--- a/thundersite/thunderapp/templates/thunderapp/profile.html
+++ b/thundersite/thunderapp/templates/thunderapp/profile.html
@@ -19,6 +19,10 @@
         font-size: 55px;
         text-align: center;
     }
+     .profileImage{
+         max-width:200px;
+     }
+
 
 </style>
 
@@ -31,13 +35,13 @@
 {% endblock %}
 
 
-<div class="container-fluid" style="background:rgb(255,255,255) !important;">
+<div class="container-fluid w3-animate-left carousel-fade" >
     <section class="container">
         <div class="container-page">
             <div class='main-login main-centre'>
                 <br>
                 <div class="bordercontainer">
-                    <img id='img' class="img-fluid" alt="Responsive image"  height=100 width="1500" src="{% static '/border.png' %}">
+                    <img id='img' class="img-fluid" alt="Not found"  height=100 width="1500" src="{% static '/border.png' %}">
 
                     <div class="centered">{{member.username}}</div>
                     <br>
@@ -50,11 +54,11 @@
                     <label id="profilePicture" for="regprofileimage{{member.id}}"  data-toggle="tooltip" title="Upload Profile Image">
 
                         {% if member.profileImage %}
-                        <img id='profile-img' class="rounded-circle img-fluid" alt="Responsive image" height=150 src='{{ member.profileImage.url }}'>
+                        <img id='profile-img' class="rounded-circle img-fluid profileImage" alt="Not found" height=150 src='{{ member.profileImage.url }}'>
 
                         {% else %}
 
-                        <img id='profile-img' class="rounded-circle img-fluid" alt="Responsive image" height=150 src="{% static '/profile-image.jpg' %}">
+                        <img id='profile-img' class="rounded-circle img-fluid profileImage" alt="Not found" height=150 src="{% static '/profile-image.jpg' %}">
 
                         {% endif %}
                     </label>
@@ -67,19 +71,19 @@
 
     <br>
 
-<span>First Name: <input type="text" class="form-control" id="profilefirstname" value="{{member.firstName}}"> </span>
+<span class="text-white bg-dark">First Name: <input type="text" class="form-control" id="profilefirstname" value="{{member.firstName}}"> </span>
 <br>
 
-<span>Last Name: <input type="text" class="form-control" id="profilelastname" value="{{member.lastName}}"></span>
+<span class="text-white bg-dark">Last Name: <input type="text" class="form-control" id="profilelastname" value="{{member.lastName}}"></span>
     <br>
-    <span>Gender: <input type="text" readonly class="form-control" id="profilegender" value="{{member.gender}}"></span>
-    <br>
-
-
-<span>Date Of Birth: <input type="text" readonly class="form-control" id="profileDOB" value="{{member.dateOfBirth}}"></span>
+    <span class="text-white bg-dark">Gender: <input type="text" readonly class="form-control" id="profilegender" value="{{member.gender}}"></span>
     <br>
 
-    <span>Email: <input type="text"  class="form-control" id="profileemail" value="{{member.email}}"></span>
+
+<span class="text-white bg-dark">Date Of Birth: <input type="text" readonly class="form-control" id="profileDOB" value="{{member.dateOfBirth}}"></span>
+    <br>
+
+    <span class="text-white bg-dark">Email: <input type="text"  class="form-control" id="profileemail" value="{{member.email}}"></span>
     <br>
 
 
