--- a/thundersite/thunderapp/templates/thunderapp/base.html
+++ b/thundersite/thunderapp/templates/thunderapp/base.html
@@ -11,35 +11,35 @@
 
     <title>Thunder Site</title>
 </head>
-<body>
-<nav class="navbar navbar-expand-md navbar-dark bg-danger sticky-top">
+<body style="background:#000000">
+<nav class="navbar navbar-expand-md navbar-dark sticky-top " style="background-color: #e1000e;">
     <button class="navbar-toggler" data-toggle="collapse" data-target="#collapse_target">
         <span class="navbar-toggler-icon"></span>
     </button>
 
     <div class="collapse navbar-collapse" id="collapse_target">
         <a class="navbar-brand"><img src="{%  static 'thunderIcon.png' %}" style="border-radius: 10px;" alt="" width="36" height="36"></a>
-        <span class="navbar-text">Thunder</span>
+        <span class="navbar-text text-white">Thunder</span>
         <ul class="navbar-nav">
             {% if loggedin %}
             <li class="nav-item">
-                <a class="nav-link" href="#">Messages</a>
+                <a class="nav-link text-white hvr-underline-from-center" href="#">Messages</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Profile</a>
+                <a class="nav-link text-white hvr-underline-from-center" href="#">Profile</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Find Friends</a>
+                <a class="nav-link text-white hvr-underline-from-center" href="#">Find Friends</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Log Out</a>
+                <a class="nav-link text-white hvr-underline-from-center" href="#">Log Out</a>
             </li>
             {% else %}
             <li class="nav-item">
-                <a class="nav-link" href="#">Log in</a>
+                <a class="nav-link text-white hvr-underline-from-center" href="#">Log in</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Sign Up</a>
+                <a class="nav-link text-white hvr-underline-from-center" href="#">Sign Up</a>
             </li>
             {% endif %}
         </ul>
@@ -50,7 +50,6 @@
 {% endblock %}
 
 
-
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
@@ -58,6 +57,42 @@
 <script type="text/javascript" src="{% static 'file_upload.js' %}"></script>
 <script type="text/javascript" src="{% static 'signin.js' %}"></script>
 <script type="text/javascript" src="{% static 'edit_profile_details.js' %}"></script>
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+
+<style>
+    .hvr-underline-from-center {
+        display: inline-block;
+        vertical-align: middle;
+        -webkit-transform: translateZ(0);
+        transform: translateZ(0);
+        box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+        -webkit-backface-visibility: hidden;
+        backface-visibility: hidden;
+        -moz-osx-font-smoothing: grayscale;
+        position: relative;
+        overflow: hidden;
+    }
+    .hvr-underline-from-center:before {
+        content: "";
+        position: absolute;
+        z-index: -1;
+        left: 50%;
+        right: 50%;
+        bottom: 0;
+        background: #ffffff;
+        height: 4px;
+        -webkit-transition-property: left, right;
+        transition-property: left, right;
+        -webkit-transition-duration: 0.3s;
+        transition-duration: 0.3s;
+        -webkit-transition-timing-function: ease-out;
+        transition-timing-function: ease-out;
+    }
+    .hvr-underline-from-center:hover:before, .hvr-underline-from-center:focus:before, .hvr-underline-from-center:active:before {
+        left: 0;
+        right: 0;
+    }
+</style>
 
 </body>
 </html>
