--- a/thundersite/thunderapp/templates/thunderapp/login.html
+++ b/thundersite/thunderapp/templates/thunderapp/login.html
@@ -8,8 +8,18 @@
 {% include "thunderapp/alerts.html" %}
 {% endblock %}
 
-<div class="container-fluid">
-    <section class="container">
+
+        {% block thunderbackground %}
+
+    {% include "thunderapp/background.html" %}
+
+    {% endblock %}
+
+<div class="container-fluid" style="background:#000000">
+    <br>
+    <br>
+    <br>
+    <section class="container w3-animate-left carousel-fade">
         <div class="container-page">
             <div class='main-login main-centre'>
 <div class="input-group">
@@ -20,28 +30,99 @@
             </h1>
             <br><br>
        {% else %}
-           <form class="form-signin" id="usersignin" pb-autologin="true" autocomplete="off" method='POST'>
+    <section class="container">
+
+                        <img class="mb-4 rounded-circle w3-center w3-animate-left carousel-fade" src="{%  static 'thunderlogo.jpg' %}" alt="" width="240" height="240">
+    </section>
+
+           <form class="form-signin w3-center w3-animate-left carousel-fade" id="usersignin" pb-autologin="true" autocomplete="off" method='POST'>
                {% csrf_token %}
-               <img class="mb-4" src="{%  static 'thunderlogo.jpg' %}" alt="" width="300" height="300">
-               <h1 class="h3 mb-3 font-weight-normal">Please enter your details to login</h1>
+               <h1 class="h3 mb-3 font-weight-normal text-white bg-dark">Please enter your details to login</h1>
                <label for="inputUserName" class="sr-only">UserName</label>
                <input type="text" id="inputUserName" name='username' maxlength="50" class="form-control" placeholder="UserName" required="" autofocus="" pb-role="username">
                <label for="inputPassword" class="sr-only">Password</label>
                <input type="password" id="inputPassword" class="form-control"  name='password' placeholder="Password" required="" pb-role="password">
                <div class="checkbox mb-3">
-                   <label>
-                       <input type="checkbox" value="remember-me"> Remember me
+                   <label class="text-white bg-dark">
+                       <input type="checkbox"  value="remember-me"> Remember me:
                    </label>
                </div>
-               <button class="btn btn-lg btn-primary btn-block" type="submit" pb-role="submit">Log in</button>
+               <br>
+               <button class="btn btn-lg btn-primary btn-block arrow bounce" type="submit" pb-role="submit">Log in</button>
            </form>
        {% endif %}
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     <script type="text/javascript" src="{% static 'signin.js' %}"></script>
+
 </div>
+
             </div>
         </div>
+
     </section>
 </div>
+
+<style>
+
+    @-moz-keyframes bounce {
+        0%, 20%, 50%, 80%, 100% {
+            -moz-transform: translateY(0);
+            transform: translateY(0);
+        }
+        40% {
+            -moz-transform: translateY(-30px);
+            transform: translateY(-30px);
+        }
+        60% {
+            -moz-transform: translateY(-15px);
+            transform: translateY(-15px);
+        }
+    }
+    @-webkit-keyframes bounce {
+        0%, 20%, 50%, 80%, 100% {
+            -webkit-transform: translateY(0);
+            transform: translateY(0);
+        }
+        40% {
+            -webkit-transform: translateY(-30px);
+            transform: translateY(-30px);
+        }
+        60% {
+            -webkit-transform: translateY(-15px);
+            transform: translateY(-15px);
+        }
+    }
+    @keyframes bounce {
+        0%, 20%, 50%, 80%, 100% {
+            -moz-transform: translateY(0);
+            -ms-transform: translateY(0);
+            -webkit-transform: translateY(0);
+            transform: translateY(0);
+        }
+        40% {
+            -moz-transform: translateY(-30px);
+            -ms-transform: translateY(-30px);
+            -webkit-transform: translateY(-30px);
+            transform: translateY(-30px);
+        }
+        60% {
+            -moz-transform: translateY(-15px);
+            -ms-transform: translateY(-15px);
+            -webkit-transform: translateY(-15px);
+            transform: translateY(-15px);
+        }
+    }
+
+    .bounce {
+        -moz-animation: bounce 2s infinite;
+        -webkit-animation: bounce 2s infinite;
+        animation: bounce 2s infinite;
+    }
+
+</style>
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+
+
+
 {% endblock %}
