added hobbies to the signup page

--- a/thundersite/thunderapp/templates/thunderapp/base.html
+++ b/thundersite/thunderapp/templates/thunderapp/base.html
@@ -9,6 +9,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
+    <link rel="stylesheet" href="{% static 'sol.css' %}">
     <title>Thunder Site</title>
 </head>
 <body>
@@ -58,6 +59,10 @@
 <script type="text/javascript" src="{% static 'file_upload.js' %}"></script>
 <script type="text/javascript" src="{% static 'signin.js' %}"></script>
 <script type="text/javascript" src="{% static 'edit_profile_details.js' %}"></script>
+<script type="text/javascript" src="{% static 'register.js' %}"></script>
+<script type="text/javascript" src="{% static 'sol.js' %}"></script>
+
+
 
 </body>
 </html>
