--- a/thundersite/thunderapp/templates/thunderapp/signup.html
+++ b/thundersite/thunderapp/templates/thunderapp/signup.html
@@ -44,15 +44,21 @@
                             <input type="date" class="form-control" id="regbday">
                         </div>
                     </div>
-                    <div class="form-group">
+                    <div class="form-group ">
                         <label for="regEmail">Email</label>
                         <input type="text" class="form-control" id="regEmail" placeholder="Email">
+
+                    </div>
+                    <div class="form-group ">
+                        <label for="reghobby">Hobbies</label>
+                        <select  id="reghobby" name="hobbies" multiple="multiple">
+                            {% for key, value in Hobby.HOBBY_CHOICES %}
+                            <option value="{{key}}">{{value}}</option>
+                            {% endfor %}
+                        </select>
                     </div>
                     <input type='submit' value="SUBMIT" id='reguser' class="btn btn-primary">
                 </form>
-                <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-
-                <script type="text/javascript" src="{% static 'register.js' %}"></script>
 
             </div>
         </div>
