--- a/thundersite/thunderapp/templates/thunderapp/base.html
+++ b/thundersite/thunderapp/templates/thunderapp/base.html
@@ -43,10 +43,10 @@
             </li>
             {% else %}
             <li class="nav-item">
-                <a class="nav-link text-white hvr-underline-from-center" href="#">Log in</a>
+                <a class="nav-link text-white hvr-underline-from-center" href="{{ login_url }}/login/">Log in</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link text-white hvr-underline-from-center" href="#">Sign Up</a>
+                <a class="nav-link text-white hvr-underline-from-center" href="{{ register_url }}/register/">Sign Up</a>
             </li>
             {% endif %}
         </ul>
@@ -66,6 +66,9 @@
 <script type="text/javascript" src="{% static 'edit_profile_details.js' %}"></script>
 <script type="text/javascript" src="{% static 'register.js' %}"></script>
 <script type="text/javascript" src="{% static 'sol.js' %}"></script>
+<script type="text/javascript" src="{% static 'listProfiles.js' %}"></script>
+<script type="text/javascript" src="{% static 'search_members.js' %}"></script>
+
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <style>
     .hvr-underline-from-center {
