--- a/thundersite/thunderapp/templates/thunderapp/profile.html
+++ b/thundersite/thunderapp/templates/thunderapp/profile.html
@@ -20,6 +20,8 @@
         text-align: center;
     }
      .profileImage{
+         height:200px;
+
          max-width:200px;
      }
 
@@ -54,7 +56,7 @@
                     <label id="profilePicture" for="regprofileimage{{member.id}}"  data-toggle="tooltip" title="Upload Profile Image">
 
                         {% if member.profileImage %}
-                        <img id='profile-img' class="rounded-circle img-fluid profileImage" alt="Not found" height=150 src='{{ member.profileImage.url }}'>
+                        <img id='profile-img' class="rounded-circle img-fluid profileImage" alt="Not found" onerror="this.src='{{STATIC_URL}}/static/image-not-found.png'" height=150 src='{{ member.profileImage.url }}'>
 
                         {% else %}
 
