--- a/thundersite/thunderapp/templates/thunderapp/signup.html
+++ b/thundersite/thunderapp/templates/thunderapp/signup.html
@@ -71,15 +71,27 @@
                         <input type="text" class="form-control" id="regEmail" placeholder="Email">
 
                     </div>
-                    <div class="form-group ">
-                        <label for="reghobby">Hobbies</label>
-                        <select  id="reghobby" name="hobbies" multiple="multiple">
+                    <div class="form-row">
+
+                    <div class="form-group col-md-6 text-white bg-dark">
+                        <label for="reghobby">Choose Your Hobbies:</label>
+                        <br>
+                        <select  id="reghobby" class="col-md-6 text-black bg-light" name="hobbies" multiple="multiple">
                             {% for key, value in Hobby.HOBBY_CHOICES %}
-                            <option value="{{key}}">{{value}}</option>
+                            <option class="col-md-6 text-black bg-light"  value="{{key}}">{{value}}</option>
                             {% endfor %}
+                            <br>
+
                         </select>
+                        <br>
+                        <br>
+
                     </div>
 
+                    <div class="form-group col-md-6 text-white bg-dark">
+                        Selected Hobbies:
+                    </div>
+                    </div>
                     <input type='submit' value="SUBMIT" id='reguser' class="btn btn-primary">
 
                 </form>
