restrict logged in user

--- a/thundersite/thunderapp/templates/thunderapp/base.html
+++ b/thundersite/thunderapp/templates/thunderapp/base.html
@@ -31,7 +31,7 @@
                 <a class="nav-link text-white hvr-underline-from-center" href="{{ profile_url }}/profile/">Profile</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link text-white hvr-underline-from-center" href="#">Find Friends</a>
+                <a class="nav-link text-white hvr-underline-from-center" href="{{ profiles_url }}/profiles/">Find Friends</a>
             </li>
             <li class="nav-item">
                 {% url 'matchlist' as matchlist_url %}
