added hobbies to the profile  page

--- a/thundersite/thunderapp/templates/thunderapp/signup.html
+++ b/thundersite/thunderapp/templates/thunderapp/signup.html
@@ -72,7 +72,7 @@
 
                     </div>
                     <div class="form-group ">
-                        <label for="reghobby">Hobbies</label>
+                        <label  class="text-white bg-dark" for="reghobby">Hobbies</label>
                         <select  id="reghobby" name="hobbies" multiple="multiple">
                             {% for key, value in Hobby.HOBBY_CHOICES %}
                             <option value="{{key}}">{{value}}</option>
