--- a/thundersite/thunderapp/static/sol.css
+++ b/thundersite/thunderapp/static/sol.css
@@ -40,6 +40,7 @@
 }
 
 .sol-inner-container {
+    background: white;
     position: relative;
     height: 30px;
     line-height: 30px;
@@ -99,7 +100,7 @@
 
 .sol-input-container input[type="text"] {
     border: 0;
-    background: transparent;
+    background: white;
     box-shadow: none;
     color: #555;
     padding:2px 7px 7px;
