--- a/thundersite/thunderapp/templates/thunderapp/background.html
+++ b/thundersite/thunderapp/templates/thunderapp/background.html
@@ -64,7 +64,7 @@
         position: absolute;
         width: 100%;
         height: 100%;
-        background: #000;
+        background: #343a40!important;
         background-size: 0.12em 100%;
         font: 16em/1 Arial;
     }
